--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,10 @@
   "name": "Python 3",
   "image": "mcr.microsoft.com/vscode/devcontainers/python:3.13",
   "forwardPorts": [8000],
-  "postCreateCommand": "bash ./.devcontainer/postCreate.sh",
+  "postCreateCommand": "bash ./.devcontainer/postCreate.sh && chmod 700 ~/.ssh && chmod 600 ~/.ssh/*",
+  "mounts": [
+    "source=${env:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
+  ],
   "customizations": {
     "vscode": {
       "extensions": [
